initial dogshit